# project-W

./: .dockerignore  .env.development  .envrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  COPYING.md  Dockerfile  Dockerfile.cron  FILESTRUCTURE.md  LICENSE  README.md  TODO.md  backend.Dockerfile  biome.json  config.yml  cron.Dockerfile  docker-compose.ci.yml  docker-compose.yml  flake.nix  index.html  nginx.conf  package.json  pnpm-lock.yaml  pyproject.toml  run.sh  runner.Dockerfile  runner_dummy.Dockerfile  svelte.config.js  tailwind.config.cjs
.github/actions/ci-basis/: action.yml
.github/workflows/: ci.yml  delete_untagged_containers.yml  docker.yml  pypi.yml
Docker/: entrypoint.sh  nginx_initial.conf  nginx_reverseProxy.conf  nginx_ssl.conf
Docker/nginx-config/: nginx_ssl.conf
backend/: .envrc  .gitignore  config.yml  flake.nix  pyproject.toml  run.sh
backend/.github/workflows/: ci.yml  delete_untagged_containers.yml
backend/doc/: config.rst  installation.rst
backend/nix/pkgs/: sphinx-jsonschema.nix
backend/project_W/: __init__.py  __main__.py  app.py  caching.py  cli_tasks.py  database.py  dependencies.py  smtp.py
backend/project_W/models/: base.py  internal.py  internal_models.py  request_data.py  response_data.py  setting_models.py  settings.py
backend/project_W/routers/: admins.py  general.py  jobs.py  ldap.py  local_account.py  oidc.py  runners.py  users.py
backend/project_W/security/: auth.py  ldap_deps.py  oidc_deps.py
dev-setup_files/: keycloak_realm.json  ldap_users.ldif  pgadmin_servers.json
doc/: .envrc  UML-diagram.drawio  api.rst  communicating_with_your_users.rst  conf.py  config.rst  connect_runner_backend.rst  database_design.rst  database_encryption.rst  database_er_model.drawio  dev_getting_started.rst  example_configs.rst  index.rst  installation.rst  intro.rst  openapi.json  pyproject.toml  tech-stack.rst  testing_and_code-quality.rst
frontend/: .env  .env.development  LICENSE  biome.json  openapi-ts.config.ts  package.json  pnpm-lock.yaml
frontend/nix/: derivation-frontendFiles.nix
frontend/src/: app.css  app.html
frontend/src/lib/components/: button.svelte  centerPage.svelte  changeEmailField.svelte  closeButton.svelte  confirmModal.svelte  confirmPasswordModal.svelte  downloadTranscriptModal.svelte  emailField.svelte  errorMsg.svelte  formPage.svelte  jobSettingsForm.svelte  passwordField.svelte  passwordWithRepeatField.svelte  rangeWithField.svelte  submitJobsModal.svelte  waitingForGoto.svelte  waitingSubmitButton.svelte
frontend/src/lib/utils/: global_state.svelte.ts  hey-api.ts  http_utils.ts  timestamp_handling.svelte.ts
frontend/src/routes/: +error.svelte  +layout.ts
lib/: .envrc  pyproject.toml
lib/project_W_lib/: config.py  logger.py
lib/project_W_lib/models/: base.py  generic_response_data.py  job_settings.py  request_models.py  response_models.py  runner_response_data.py  shared_setting_models.py
nix/: backend_module.nix  build_system_overlays.nix  derivation-frontendFiles.nix  derivation_frontend_files.nix  make_dev_shells.nix  module.nix  overlay.nix  runner_module.nix  shell.nix
nix/pkgs/: autodoc-pydantic.nix  derivation-frontendFiles.nix  project-W-runner.nix  project-W.nix  sphinx-jsonschema.nix  sphinx-mdinclude.nix
notebooks/: demo.ipynb
project_W/: __init__.py  __main__.py  app.py  caching.py  cli_tasks.py  config.py  database.py  dependencies.py  logger.py  model.py  periodic_background_tasks.py  runner_manager.py  security.py  smtp.py  utils.py
project_W/models/: base.py  internal.py  request_data.py  response_data.py  settings.py
project_W/routers/: admins.py  jobs.py  ldap.py  local_account.py  oidc.py  runners.py  users.py
project_W/security/: auth.py  ldap.py  ldap_deps.py  local_account.py  local_account_deps.py  local_token.py  oidc.py  oidc_deps.py
runner/: .envrc  pyproject.toml  run.sh
runner/.github/workflows/: docker.yml
runner/project_W_runner/: __main__.py  runner.py  utils_dummy.py  utils_whisperx.py
runner/project_W_runner/models/: internal.py  internal_models.py  setting_models.py
src/: App.svelte  app.css  app.html  app.pcss
src/components/: centerPage.svelte  changeEmailField.svelte  confirmModal.svelte  confirmPasswordModal.svelte  emailField.svelte  errorMsg.svelte  greetingPage.svelte  passwordField.svelte  passwordWithRepeatField.svelte  submitJobsModal.svelte  waiting.svelte  waitingSubmitButton.svelte
src/lib/: emailField.svelte  global_state.svelte.ts  greetingPage.svelte  httpRequests.ts  navigation.ts  passwordField.svelte  passwordWithRepeatField.svelte  waitingSubmitButton.svelte
src/lib/components/: button.svelte  centerPage.svelte  changeEmailField.svelte  closeButton.svelte  confirmModal.svelte  confirmPasswordModal.svelte  downloadTranscriptModal.svelte  emailField.svelte  errorMsg.svelte  jobSettingsForm.svelte  passwordField.svelte  passwordWithRepeatField.svelte  rangeWithField.svelte  submitJobsModal.svelte  waitingSubmitButton.svelte
src/lib/utils/: global_state.svelte.ts  httpRequests.svelte.ts  httpRequestsAuth.svelte.ts  schema.d.ts  timestamp_handling.svelte.ts
src/routes/: +error.svelte  +layout.svelte  About.svelte  Account.svelte  AccountSettings.svelte  Activate.svelte  JobList.svelte  Login.svelte  NotFound.svelte  RequestPasswordReset.svelte  ResetPassword.svelte  Security.svelte  Signup.svelte  UserInfo.svelte
src/routes/(authed)/: +layout.svelte  +page.svelte
src/routes/(backend_reachable)/: +error.svelte  +layout.svelte  +layout.ts
src/routes/(unauthed)/: +layout.svelte  +layout.ts
src/routes/about/: +page.svelte  +page.ts
src/routes/imprint/: +page.svelte
src/routes/login/: +page.svelte
src/routes/tos/: +page.svelte
src/utils/: backendConfig.ts  helperFunctions.ts  httpRequests.ts  navigation.ts  stores.ts
tests/: .envrc  __init__.py  conftest.py  pyproject.toml  requirements.txt  test_api.py  test_cli.py  test_general.py  test_job_management.py  test_project_W.py  test_user-management.py  test_user_management.py  testing.py  utils.py
tests/helpers/: flask_test_utils.py
(+64 files in other folders)
