[build-system]
requires = [
    "setuptools>=80",
    #we need larger than 9 to get PR https://github.com/pypa/setuptools-scm/pull/1154
    "setuptools_scm>=9",
]
build-backend = "setuptools.build_meta"

[project]
name = "project_W"
description = "The backend of Project-W, a self-hostable platform on which users can create transcripts of their audio files (speech-to-text) using Whisper AI"
maintainers = [
    { name = "Julian Partanen", email = "julian@partanengroup.de"},
]
dynamic = ["version"]
requires-python = ">=3.11"
license = { text = "AGPLv3" }
dependencies = [
    "aiosmtplib>=4.0.2",
    "argon2-cffi>=25.1.0",
    "authlib>=1.6.3",
    "bonsai>=1.5.4",
    "click>=8.2.1",
    "email-validator>=2.3.0",
    "fastapi>=0.116.1",
    "granian[pname]>=2.5.2",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "platformdirs>=4.4.0",
    "psycopg[binary,pool]>=3.2.9",
    "pyaml-env>=1.2.2",
    "pycryptodome>=3.23.0",
    "pydantic>=2.11.7",
    "python-multipart>=0.0.20",
    "redis[hiredis]>=6.4.0",
    "uvicorn>=0.35.0",
]

[project.scripts]
project_W = "project_W.__main__:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["project_W*"]

[tool.setuptools_scm]
root = ".."
version_scheme = "python-simplified-semver"
local_scheme = "node-and-date"
version_file = "project_W/_version.py"

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "granian[pname,reload]>=2.5.2",
]
