[project]
name = "project_W_docs"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "autodoc-pydantic>=2.2.0",
    "myst-parser>=4.0.1",
    "project-w",
    "project-w-runner",
    "sphinx>=8.2.3,<9.0.0", #sphinx 9 seems to break automatic config docs (autodoc+autodoc_pydantic)
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-openapi>=0.8.4",
]

[tool.uv.sources]
project_W = { path = "../backend" }
project_W_runner = { path = "../runner" }
