[build-system]
requires = [
    "setuptools>=80",
    #we need larger than 9 to get PR https://github.com/pypa/setuptools-scm/pull/1154
    "setuptools_scm>=9",
]
build-backend = "setuptools.build_meta"

[project]
name = "project_W_runner"
description = "Add your description here"
maintainers = [
    { name = "Julian Partanen", email = "julian@partanengroup.de"},
]
dynamic = ["version"]
requires-python = ">=3.11,<3.13"
license = { text = "AGPLv3" }
dependencies = [
    "click>=8.2.1",
    "httpx>=0.28.1",
    "platformdirs>=4.4.0",
    "pyaml-env>=1.2.2",
    "pydantic>=2.11.7",
]

[project.scripts]
project_W_runner = "project_W_runner.__main__:main"

[project.optional-dependencies]
not-dummy = [
    "hf-xet>=1.1.9",
    "whisperx>=3.4.2",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["."]
include = ["project_W_runner*"]

[tool.setuptools_scm]
root = ".."
version_scheme = "python-simplified-semver"
local_scheme = "node-and-date"
version_file = "project_W_runner/_version.py"

[tool.ruff]
line-length = 100
